--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -22,7 +22,15 @@ spec:
                   name: jwt-secret
                   key: jwt
             - name: MONGO_URI
-              value: mongodb://tickets-mongo-srv:27017/tickets
+              value: 'mongodb://tickets-mongo-srv:27017/tickets'
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NATS_CLUSTER_ID
+              value: ticketing
 ---
 apiVersion: v1
 kind: Service
