--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.0",
     "next": "^9.5.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
