--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -48,3 +48,11 @@ build:
         manual:
           - src: 'src/**/*/ts'
             dest: .
+    - image: umeshbhat/payments
+      context: payments
+      docker:
+        dockerfile: dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*/ts'
+            dest: .
