--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: ticketing.umeshbhat.in
+    - host: www.ticketing.umeshbhat.in
       http:
         paths:
           - path: /api/users/?(.*)
